Closed Bug 190349 Opened 22 years ago Closed 22 years ago

[junk] - Existing IMAP Junk folder not being marked as Special in new profile

Categories

(SeaMonkey :: MailNews: Message Display, defect)

defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.4alpha

People

(Reporter: esther, Assigned: sspitzer)

Details

(Whiteboard: [adt3])

Attachments

(1 file)

Using trunk build 20030121 on winxp and linux IMAP accounts that already have a Junk folder marked as special in a different profile cannot be marked as special in a new profile. I've tried enabling Junk Controls, dragging messages into the Junk folder, exit and relaunching. Nothing worked to convert that existing Junk folder as Special. I had to Delete the folder then let the new profile create it's own Junk folder. This isn't a good experience for the user who uses NS7 at work and then again at home. 1. Launch app, create a New Profile 2. Launch mail, add an IMAP account that does not have a folder called Junk and log in. 3. Enable Junk Mail Controls Notice you have a Junk folder, now collapse then expand the server to see the Junk folder become a Special folder. 4. Exit app 5. Launch app, create a New Profile 6. Launch mail, add the same IMAP account and log in Notice you have the Junk folder but it isn't a Special folder - expected. 7. Enable Junk Mail Controls, notice Junk folder is still not Special. 8. Expand/Collapse server, mark messages as Junk then move them into the folder, exit and relaunch. Still the Junk folder is not special Result- Junk folder can't be marked as a special folder Expected- Junk folder to become a special folder The only way I can get it into special folder status is to delete the folder then let this profile create it's own special folder.
nominating
Keywords: nsbeta1
QA Contact: laurel → esther
Mail triage team: nsbeta1+/adt3
Keywords: nsbeta1nsbeta1+
Whiteboard: [adt3]
Note: If user doesn't log into their IMAP account in this new profile (and I don't know why they would not log in) then Enables JMC when they log into this account the Junk Mail folder will become special after expanding and collapsing the twisty. Note: this is a one time chance to make the existing Junk folder special for this new profile.
Same is true for POP if user already had a folder called "Junk" and for Local Mail if user already had a folder called "Junk". Basically the app has to create it for it to be special and placed with special folders.
fix in hand. you'll still have to restart (that's a much bigger bug, involving folder flags and the folder datasource, which other special folders, like sent and drafts, should have) I'll attach the patch.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.4alpha
fixed. at least it works better after restart. this has r/sr=bienvenu. but there's a couple spin of bugs here. 1) the generic special folder problems 2) the special folder will stick (even after restart) for certain folders (like top level folders named "Junk") I'll elaborate in the spin off bugs.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Using trunk builds 20030314 on winxp, and 20030312 on linux and Mac osx this is fixed as originally stated. Verified. However note, I don't have to exit and relaunch (see comment 5) to see the Special placement and icon I just have to collapse and expand the twisty for the account.
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: