fix for bug #190349.  fix some problems with choosing an existing folder as the junk mail folder.  r/sr=bienvenu